--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,51 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.header3{
+  letter-spacing: 2px;
+    font-weight: 900;
+    color: gray;
+    font-size: 22px;
+}
+
+.form{
+  padding: 20px 40px;
+}
+
+input{
+  width: 40%;
+    padding: 10px;
+    margin-right: 20px;
+    border-radius: 4px;
+    border: 0.5px solid;
+    outline: blue;
+}
+
+select{
+  width: 20%;
+  padding: 9px;
+  margin-right: 20px;
+  border: 0.5px solid;
+  outline: blue;
+  background: white;
+  border-radius: 4px;
+}
+
+.btn-add{
+  width: 10%;
+  padding: 10px;
+  border: none;
+  background: blue;
+  color: white;
+  font-weight: bold;
+}
+
+.new-book{
+  width: 100%;
+  box-shadow: 0px 0px 10px;
+  margin: 10px 0px;
+  height: 150px;
+}
+
