--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,8 @@ code {
 }
 
 
+
+
 .header3{
   letter-spacing: 2px;
     font-weight: 900;
@@ -53,6 +55,7 @@ select{
 }
 
 .new-book{
+  padding: 15px 0 0 20px;
   width: 90%;
   margin: 20px 55px;
   box-shadow: 0px 0px 2px;
